Revise the algorithm after Step3. almost written by Y.Sugahara and minor modify by me. This works for all input of FMOD/FREM and of course solves PR/47810.